Fixing the way the keys are generated